Edit, Update and show index listing

--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -19,6 +19,7 @@ table, th, td {
         <%= link_to 'About', pages_about_path %>
 <% end %>
         <%= link_to 'About' , about_path %>
+        <%= link_to 'Create Article' , new_article_path %>
           </h1>
       </th>
       <tr>
