--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,4 @@
-<h1> Create an article </h1>
-
-<%= link_to 'All articles' , articles_path %>
+<h2>Edit existing article</h2>
 
 <% if @article.errors.any? %>
 <h2> The following errors prevented the article from getting created </h2>
@@ -10,7 +8,6 @@
   </ul>
   <% end %>
   <% end %>
-
 
 <%= form_for @article do |f| %>
 
