--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,13 @@
 <h1> Showing selected article </h1>
 
-<p>Title: <%= @article.title %>
+<p>
+
+  Title: <%= @article.title %>
 </p>
 
 <p>
   Description: <%= @article.description %>
+</p>
+
+<%= link_to "Back to Listings", articles_path %>
+<%= link_to "Edit this article", edit_article_path(@article) %>
