Add partials and destroy actions

--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,93 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<style>
-table, th, td {
-    border: 1px solid black;
-}
-</style>
-<title> Welcome to Alpha0-blog</title>
-</head>
-<body>
+<h1> Welcome to Alpha-blog</h1>
 
-  <table style="width:100% border:5px solid red">
-    <tr>
-      <th> <h1>
-
-<% if false %>
-        #WITHOUT ROOT PATH IN ROUTE
-        <%= link_to 'About', pages_about_path %>
-<% end %>
-        <%= link_to 'About' , about_path %>
-        <%= link_to 'Create Article' , new_article_path %>
-          </h1>
-      </th>
-      <tr>
-  </table>
-<table style="width:100% border: 1px solid black">
-
-<tr>
-<th> <h1 align="center">Name of the Company </h1> </th>
-<th> <h1> Sector </h1> </th>
-<th> <h1> Logo </h1> </th>
-<th> <h1> Revenue </h1></th>
-</tr>
-
-<tr>
-	<td>
-		<h2>Google </h2>
-	</td>
-<td>
- <h2> E-commerce </h2>
-</td>
-<td>
-	<img src="http://betanews.com/wp-content/uploads/2015/09/sans_serif_google_logo_2015_g.jpg" alt ="Google" width = "250" height ="250">
-</td>
-<td>
-	<h2> 23billion</h2>
-</td>
-	<tr>
-	<td>
-		<h2>Apple </h2>
-	</td>
-<td>
- <h2> Tele-Comm </h2>
-</td>
-<td>
-	<img src="http://cdn.macrumors.com/article-new/2015/02/Apple-Logo.png" alt ="Apple" width = "250" height ="250">
-</td>
-<td>
-	<h2> 230billion</h2>
-</td>
-</tr>
-
-<tr>
-	<td>
-		Facebook
-	</td>
-	<td>
-		E-commerce
-	</td>
-	<td>
-		<img src="https://int-dir.s3.amazonaws.com/uploads/118_118_FB-f-Logo__blue_144.png" alt= "facebook" width="250" height = "250">
-	</td>
-	<td>
-		<h2>
-			45Billions</h2>
-		</td>
-
-</tr>
-
-
-
-
-
-
-
-</table>
-
-
-
-
-</body>
-</html>
+<%= link_to 'Alpha-Blog' , articles_path %> | <%= link_to 'About', about_path %> | <%= link_to 'Create a article' , new_article_path %>
