--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,34 +1,2 @@
 <h1> Create an article </h1>
-
-<%= link_to 'All articles' , articles_path %>
-
-<% if @article.errors.any? %>
-<h2> The following errors prevented the article from getting created </h2>
-<ul>
-<% @article.errors.full_messages.each do |msg| %>
-<li><%= msg %>
-  </ul>
-  <% end %>
-  <% end %>
-
-
-<%= form_for @article do |f| %>
-
-<p>
-  <%= f.label :title %>
-  <br/>
-  <%= f.text_field :title %>
-</p>
-
-<p>
-  <%= f.label :description %>
-  <br/>
-  <%= f.text_area :description %>
-</p>
-<p>
-  <%= f.submit %>
-</p>
-
-
-<% end %>
-<%= link_to "Back to Listings", articles_path %>
+<%= render 'form' %>
