--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,72 @@
+$navbar-default-bg: #ffe6b3;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo {
+  float: left;
+  font-size: 1.7em;
+  color: black;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+
+}
+
+#logo:hover {
+    color: #fff;
+  text-decoration: none;
+}
+
+.center {
+  text-align: center;
+}
+.jumbotron
+{
+  background-image: url("sunglass.jpg");
+  background-size: cover;
+  height: 550px;
+}
+
+.jumbotron h1 {
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: bold;
+}
+
+.btn-suncus1{
+  font-size: 1.7em;
+  background-color: #ffe6b3;
+  color: black;
+}
+
+footer {
+
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 5px solid #ffe6b3;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+.suncus2 {
+  background-color: #ffe6b3;
+  width: auto;
+}
+footer small {
+  float: left;
+
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
+}
