--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,3 +1,6 @@
-<h1> Welcome to Alpha-blog</h1>
+<div class="center jumbotron">
+  <h1>Welcome to Sunglasses.ie blog</h1>
 
-<%= link_to 'Alpha-Blog' , articles_path %> | <%= link_to 'About', about_path %> | <%= link_to 'Create a article' , new_article_path %>
+  <%= link_to 'Sign Up Now' , "#" , class: "btn btn-danger btn-lg btn-suncus1" %>
+</div>
+
