--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,6 @@
-<%= link_to 'All articles' , articles_path %>
+<% if false %> <%= link_to 'All articles' , articles_path %> <% end %>
 
+<!-- Error Notifications -->
 <% if @article.errors.any? %>
 <h2> The following errors prevented the article from getting created </h2>
 <ul>
@@ -9,24 +10,34 @@
   <% end %>
   <% end %>
 
-
-<%= form_for @article do |f| %>
-
-<p>
+<div class="row">
+  <div class="col-sm-12">
+<%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+  <div class="form-group">
+    <div class="control-label col-sm-2">
   <%= f.label :title %>
-  <br/>
-  <%= f.text_field :title %>
-</p>
+    </div>
+    <div class="col-sm-8">
+      <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+    </div>
+    </div>
 
-<p>
-  <%= f.label :description %>
-  <br/>
-  <%= f.text_area :description %>
-</p>
-<p>
-  <%= f.submit %>
-</p>
-
-
-<% end %>
-<%= link_to "Back to Listings", articles_path %>
+  <div class="form-group">
+    <div class="control-label col-sm-2">
+      <%= f.label :description %>
+    </div>
+    <div class="col-sm-8">
+  <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
+    </div>
+    </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit class: "btn btn-primary btn-lg" %>
+    </div>
+    </div>
+ <% end %>
+  </div>
+</div>
+<div class="col-xs-4 col-xs-offset-4">
+ <%= link_to 'Cancel request and return to Article Listing' , articles_path %>
+</div>
