--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,31 +1,2 @@
-<h2>Edit existing article</h2>
-
-<% if @article.errors.any? %>
-<h2> The following errors prevented the article from getting created </h2>
-<ul>
-<% @article.errors.full_messages.each do |msg| %>
-<li><%= msg %>
-  </ul>
-  <% end %>
-  <% end %>
-
-<%= form_for @article do |f| %>
-
-<p>
-  <%= f.label :title %>
-  <br/>
-  <%= f.text_field :title %>
-</p>
-
-<p>
-  <%= f.label :description %>
-  <br/>
-  <%= f.text_area :description %>
-</p>
-<p>
-  <%= f.submit %>
-</p>
-
-
-<% end %>
-<%= link_to "Back to Listings", articles_path %>
+<h2 align="center">Edit existing article</h2>
+<%= render 'form' %>
