--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,11 +41,15 @@ $navbar-default-bg: #ffe6b3;
   color: black;
 }
 
+.description {
+  margin-top: 10px;
+}
 footer {
 
   margin-top: 45px;
   padding-top: 5px;
   border-top: 5px solid #ffe6b3;
+  overflow:hidden
 }
 
 footer a:hover {
@@ -56,6 +60,27 @@ footer a:hover {
   background-color: #ffe6b3;
   width: auto;
 }
+
+.sunglass-cus3 {
+  margin: 10px;
+}
+
+.article-title {
+  font-weight: bold ;
+  font-size: 1.7em ;
+
+}
+
+.article-body {
+  border-top: 1px solid #eaeaea;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+
+
+
+
 footer small {
   float: left;
 
@@ -66,6 +91,10 @@ footer ul {
   list-style: none;
 }
 
+.article-actions {
+  border-top: 2px solid #ffe6b3;
+  padding-top: 5px;
+}
 footer ul li {
   float: left;
   margin-left: 15px;
