--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="container suncus2">
+<div class="container custom_footer">
 <footer class="footer">
   <small>
     Copyright &copy; <a href="#"> Sunglasses.ie </a>
