--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,26 @@
-<div class="container custom_footer">
-<footer class="footer">
-  <small>
-    Copyright &copy; <a href="#"> Sunglasses.ie </a>
-  </small>
+<footer>
+  <div class="container">
+<div class="row">
+  <div class="col-xs-4">
+        <ul>    <li>Hello</li> </ul>
 
-  <nav>
-    <ul>
-      <li><%= link_to "About", about_path %></li>
-    </ul>
-  </nav>
-  </footer>
-</div>
+  </div>
+
+  <div class="col-xs-4">
+    <ul>    <li>Hello</li> 
+      <li> <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li></ul>
+  </div>
+
+  <div class="col-xs-4 navbar-text pull-right">
+    <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
+
+
+  </div>
+
+
+    </div>
+<small>
+  Copyright &copy; <%= link_to 'Sunglasses Ireland' , root_path %>
+    </small>
+  </div>
+      </footer>
