--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,5 +1,8 @@
+<div class="container-fluid">
 <div class="center jumbotron">
   <h1>Welcome to Sunglasses.ie blog</h1>
   <%= link_to 'Sign Up Now' , "#" , class: "btn btn-danger btn-lg btn-suncus1" %>
 </div>
+</div>
+
 
