--- a/app/views/layouts/_navigationbar.html.erb
+++ b/app/views/layouts/_navigationbar.html.erb
@@ -17,7 +17,10 @@
       <ul class="nav navbar-nav">
       <!--  <li class><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
         <li><%= link_to "Articles", articles_path %></li>
+        <li><%= link_to "Sunglasses" , sunglasses_path %> </li>
+        <li><%= link_to "Glasses" , glasses_path %> </li>
         <!--<li><a href="#">Link</a></li>-->
+
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
