--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -5,4 +5,30 @@
 </div>
 </div>
 
+<div class="container text-center">
+  <h3>What We Sell</h3><br>
+  <div class="row">
+    <div class="col-sm-4">
+<%= link_to image_tag("sunglasses-home.png") , sunglasses_path , class: "img-responsive" , width: "100%" %>
+
+
+      <p><strong><%= link_to "Sunglasses" , sunglasses_path %> </strong></p>
+    </div>
+    <div class="col-sm-4">
+      <%= link_to image_tag("glasses.png") , glasses_path , class: "img-responsive", alt: "Glasses", width: "100%" %>
+      <p><strong><%= link_to "Glasses" , glasses_path %> </strong></p>
+
+
+    </div>
+    <div class="col-sm-4">
+      <div class="well">
+        <p style="color:red;font-size:1.7em">10% off on Sunglasses with Code:<span style="font-weight:bold"> SummerSale16</span></p>
+      </div>
+      <div class="well">
+     <p style="color:red;font-size:1.7em">25% off on Glasses with Code:<span style="font-weight:bold"> SummerSale16</span></p>
+      </div>
+    </div>
+  </div>
+</div><br>
+
 
